--- a/compose.yml
+++ b/compose.yml
@@ -6,18 +6,20 @@ services:
       - 1.0.0.1
       - 127.0.0.11
     environment:
-      VPN_SERVICE_PROVIDER: protonvpn
-      VPN_TYPE: openvpn
-      OPENVPN_USER: ${OPENVPN_USER}
-      OPENVPN_PASSWORD: ${OPENVPN_PASSWORD}
-      SERVER_HOSTNAMES: node-ch-05.protonvpn.net,node-ch-06.protonvpn.net,node-ch-07.protonvpn.net,node-ch-08.protonvpn.net
+      LOG_LEVEL: ${GLUETUN_LOG_LEVEL:-info}
+      VPN_SERVICE_PROVIDER: ${VPN_SERVICE_PROVIDER}
+      VPN_TYPE: wireguard
+      SERVER_COUNTRIES: ${VPN_SERVER_COUNTRIES}
+      WIREGUARD_PRIVATE_KEY: ${WIREGUARD_PRIVATE_KEY}
+      WIREGUARD_PRESHARED_KEY: ${WIREGUARD_PRESHARED_KEY}
+      WIREGUARD_ADDRESSES: ${WIREGUARD_ADDRESSES}
+      FIREWALL_VPN_INPUT_PORTS: ${FIREWALL_VPN_INPUT_PORTS}
       # Allow LAN access to other containers
       FIREWALL_OUTBOUND_SUBNETS: 172.16.0.0/12
       DNS_KEEP_NAMESERVER: "on"
+      VERSION_INFORMATION: "off"
     cap_add:
       - NET_ADMIN
-    sysctls:
-      - net.ipv6.conf.all.disable_ipv6=0
     deploy:
       resources:
         limits:
@@ -108,8 +110,7 @@ services:
       timeout: 5s
       retries: 5
 
-  listener:
-    &common-dht-torznab
+  listener: &common-dht-torznab
     build:
       context: .
       target: listener
