--- a/compose.yml
+++ b/compose.yml
@@ -1,17 +1,56 @@
 services:
+  gluetun:
+    image: docker.io/qmcgaw/gluetun@sha256:8eb8499c778e7b13ef5b23278e80390264cbeda8bfcc3d8b21fc07e0710f2fbb
+    dns:
+      - 1.1.1.1
+      - 1.0.0.1
+      - 127.0.0.11
+    environment:
+      LOG_LEVEL: ${GLUETUN_LOG_LEVEL:-info}
+      VPN_SERVICE_PROVIDER: ${VPN_SERVICE_PROVIDER}
+      VPN_TYPE: wireguard
+      SERVER_COUNTRIES: ${VPN_SERVER_COUNTRIES}
+      WIREGUARD_PRIVATE_KEY: ${WIREGUARD_PRIVATE_KEY}
+      WIREGUARD_PRESHARED_KEY: ${WIREGUARD_PRESHARED_KEY}
+      WIREGUARD_ADDRESSES: ${WIREGUARD_ADDRESSES}
+      FIREWALL_VPN_INPUT_PORTS: ${FIREWALL_VPN_INPUT_PORTS}
+      # Allow LAN access to other containers
+      FIREWALL_OUTBOUND_SUBNETS: 172.16.0.0/12
+      DNS_KEEP_NAMESERVER: "on"
+      VERSION_INFORMATION: "off"
+    cap_add:
+      - NET_ADMIN
+    devices:
+      - /dev/net/tun:/dev/net/tun
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 150M
+          pids: 50
 
   magneticod:
     build:
       context: https://github.com/boramalper/magnetico.git#master
       dockerfile: Dockerfile.magneticod
     depends_on:
-      - beanstalkd
+      beanstalkd:
+        condition: service_started
+      gluetun:
+        condition: service_healthy
     command:
       - --database=beanstalkd://beanstalkd:11300/magneticod_tube
       - --verbose
       - --leech-max-n=500
       - --indexer-interval=1
       - --indexer-max-neighbors=10000
+    network_mode: service:gluetun
+    deploy:
+      resources:
+        limits:
+          cpus: "4.0"
+          memory: 75M
+          pids: 20
 
   beanstalkd:
     image: guillaumedsde/beanstalkd-distroless:1.13
@@ -31,6 +70,12 @@ services:
       - target: 11300
         published: 11300
         protocol: tcp
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 100M
+          pids: 5
 
   postgres:
     image: postgres:15-alpine
@@ -40,7 +85,7 @@ services:
         protocol: tcp
     environment:
       POSTGRES_USER: torznab
-      POSTGRES_PASSWORD: torznab
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-torznab}
       POSTGRES_DB: torznab
     volumes:
       - type: volume
@@ -52,7 +97,12 @@ services:
       - "log_min_duration_statement=0"
       - "-c"
       - "max_connections=500"
-
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 750M
+          pids: 400
     healthcheck:
       test:
         - "CMD-SHELL"
@@ -62,8 +112,7 @@ services:
       timeout: 5s
       retries: 5
 
-  listener:
-    &common-dht-torznab
+  listener: &common-dht-torznab
     build:
       context: .
       target: listener
@@ -71,8 +120,14 @@ services:
       migrations:
         condition: service_completed_successfully
     environment:
-      DHT_TORZNAB__PGSQL_DSN: "postgresql+asyncpg://torznab:torznab@postgres/"
+      DHT_TORZNAB__PGSQL_DSN: "postgresql+asyncpg://torznab:${POSTGRES_PASSWORD:-torznab}@postgres/"
       DHT_TORZNAB__BEANSTALKD_URL: "beanstalkd://beanstalkd:11300/magneticod_tube"
+    deploy:
+      resources:
+        limits:
+          cpus: "1.5"
+          memory: 150M
+          pids: 5
 
   migrations:
     <<: *common-dht-torznab
@@ -82,6 +137,12 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "1.0"
+          memory: 150M
+          pids: 5
 
   api:
     <<: *common-dht-torznab
@@ -92,6 +153,12 @@ services:
       - target: 8080
         published: 8080
         protocol: tcp
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 750M
+          pids: 20
 
   # FIXME DRY
   peer_count_updater:
@@ -99,6 +166,18 @@ services:
     build:
       context: .
       target: peer_count_updater
+    depends_on:
+      migrations:
+        condition: service_completed_successfully
+      gluetun:
+        condition: service_healthy
+    network_mode: service:gluetun
+    deploy:
+      resources:
+        limits:
+          cpus: "4.0"
+          memory: 200M
+          pids: 20
 
 volumes:
   pg-data:
