--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,12 +10,12 @@ updates:
     allow:
       - dependency-type: "all"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
