--- a/compose.prod.override.yml
+++ b/compose.prod.override.yml
@@ -1,6 +1,5 @@
 services:
-  listener:
-    &common-dht-torznab
+  listener: &common-dht-torznab
     image: ghcr.io/guillaumedsde/dht-torznab:latest
     build: {}
     entrypoint:
@@ -26,9 +25,11 @@ services:
       - gunicorn
     command: []
     build: {}
+    ports:
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.api.rule: "Host(`api.${DOMAIN}`)"
 
-
-  # FIXME DRY
   peer_count_updater:
     <<: *common-dht-torznab
     entrypoint:
@@ -38,6 +39,69 @@ services:
       - dht_torznab.peer_count_updater
     build: {}
 
+  # reverse proxy
+  traefik:
+    image: traefik:v2.10
+    user: ${UID:-1000}:${GID:-1000}
+    cap_add:
+      - NET_BIND_SERVICE
+    command:
+      - "--global.checknewversion=false"
+      - "--global.sendanonymoususage=false"
+      - "--log.level=${TRAEFIK_LOG_LEVEL:-INFO}"
+      # docker configuration
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      # entrypoints
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
+      - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.websecure.http.tls.certResolver=le"
+      - "--entrypoints.websecure.http.tls.domains[0].main=${DOMAIN}"
+      - "--entrypoints.websecure.http.tls.domains[0].sans=*.${DOMAIN}"
+      # DNS challenge
+      - "--certificatesresolvers.le=true"
+      - "--certificatesresolvers.le.acme.storage=/data/acme.json"
+      - "--certificatesresolvers.le.acme.dnschallenge=true"
+      - "--certificatesresolvers.le.acme.dnschallenge.delayBeforeCheck=30"
+      - "--certificatesresolvers.le.acme.dnschallenge.provider=ovh"
+      - "--certificatesresolvers.le.acme.email=${LETSENCRYPT_EMAIL}"
+      - "--certificatesresolvers.le.acme.keytype=EC384"
+      - "--certificatesresolvers.le.acme.dnsChallenge.resolvers=1.1.1.1:53,8.8.8.8:53"
+      # configs
+      - "--providers.file.directory=/config/"
+    environment:
+      OVH_ENDPOINT: ${OVH_ENDPOINT}
+      OVH_APPLICATION_KEY: ${OVH_APPLICATION_KEY}
+      OVH_APPLICATION_SECRET: ${OVH_APPLICATION_SECRET}
+      OVH_CONSUMER_KEY: ${OVH_CONSUMER_KEY}
+      LEGO_EXPERIMENTAL_CNAME_SUPPORT: "true"
+    read_only: true
+    volumes:
+      - type: volume
+        source: traefik-data
+        target: /data
+      - type: bind
+        source: ./config/traefik
+        target: /config
+        read_only: true
+    tmpfs:
+      - /tmp:mode=770,size=5M,uid=${UID},gid=${GID}
+    ports:
+      - target: 80
+        host_ip: 0.0.0.0
+        published: 80
+        protocol: tcp
+      - target: 443
+        host_ip: 0.0.0.0
+        published: 443
+        protocol: tcp
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 200M
+    memswap_limit: 200M
+
 volumes:
-  pg-data:
-  beanstalkd-binlog:
+  traefik-data:
