--- a/compose.prod.override.yml
+++ b/compose.prod.override.yml
@@ -25,7 +25,7 @@ services:
       - gunicorn
     command: []
     build: {}
-    ports:
+    ports: []
     labels:
       traefik.enable: "true"
       traefik.http.routers.api.rule: "Host(`api.${DOMAIN}`)"
