traefik as root

--- a/compose.prod.override.yml
+++ b/compose.prod.override.yml
@@ -42,7 +42,7 @@ services:
   # reverse proxy
   traefik:
     image: traefik:v2.10
-    user: ${UID:-1000}:${DOCKER_GID:-999}
+    user: 0:${DOCKER_GID:-999}
     cap_add:
       - NET_BIND_SERVICE
     command:
@@ -91,7 +91,7 @@ services:
         target: /var/run/docker.sock
         read_only: true
     tmpfs:
-      - /tmp:mode=770,size=5M,uid=${UID:-1000},gid=${GID:-1000}
+      - /tmp:mode=770,size=5M
     ports:
       - target: 80
         host_ip: 0.0.0.0
