--- a/compose.prod.override.yml
+++ b/compose.prod.override.yml
@@ -35,6 +35,8 @@ services:
     command: []
     build: {}
     ports: []
+    environment:
+      DHT_TORZNAB__API__KEY: ${DHT_TORZNAB__API__KEY}
     labels:
       traefik.enable: "true"
       traefik.http.routers.api.rule: "Host(`api.${DOMAIN}`)"
