--- a/compose.prod.override.yml
+++ b/compose.prod.override.yml
@@ -113,6 +113,8 @@ services:
         published: 443
         protocol: tcp
     deploy:
+      restart_policy:
+        condition: any
       resources:
         limits:
           cpus: "2.0"
