--- a/compose.yml
+++ b/compose.yml
@@ -52,7 +52,7 @@ services:
       resources:
         limits:
           cpus: "4.0"
-          memory: 75M
+          memory: 150M
 
   beanstalkd:
     image: guillaumedsde/beanstalkd-distroless:1.13
@@ -77,7 +77,7 @@ services:
       resources:
         limits:
           cpus: "2.0"
-          memory: 500M
+          memory: 1G
 
   postgres:
     image: postgres:15-alpine
